--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog <span id="tagline">
-                    Tu blog de confianza
+                    Tu blog de maestro
                 </span>
             </div>
             <div id="post">
@@ -23,6 +23,9 @@
                     y tus ideas. Mucho mas  que ir a conferencias o salir en
                     youtube. Excepto si eres un rockstar. Pero estadísticamente
                     no lo eres.... por ahora.
+                </p>
+                <p>
+                    Suscribete y dale like.
                 </p>
             </div>
         </div>
