--- a/blogpost.html
+++ b/blogpost.html
@@ -27,6 +27,9 @@
                 <p>
                     Suscribete y dale like.
                 </p>
+		<div id="footer">
+			Hecho con amor en Platzi
+		</div>
             </div>
         </div>
     </body>
