--- a/blogpost.html
+++ b/blogpost.html
@@ -12,16 +12,16 @@
             </div>
             <div id="post">
                 <h1>
-                    Este es el titulo atractivo e interesante del post
+                    Este es el título atractivo e interesante del post
                 </h1>
                 <p>
                     Y este es el parrafo de inicio donde vamos a explicar las cosas
-                    increibles que se pueden hacer con las ramas
+                    increíbles que se pueden hacer con las ramas.
                 </p>
                 <p>
-                    Los blogs son la mejor forma de compartir informacion
+                    Los blogs son la mejor forma de compartir información
                     y tus ideas. Mucho mas  que ir a conferencias o salir en
-                    youtube. Excepto si eres un rockstar. Pero estadísticamente
+                    Youtube. Excepto si eres un rockstar. Pero estadísticamente
                     no lo eres.... por ahora.
                 </p>
                 <p>
