--- a/blogpost.html
+++ b/blogpost.html
@@ -12,16 +12,16 @@
             </div>
             <div id="post">
                 <h1>
-                    Este es el título atractivo e interesante del post
+                    Este es el t&iacute;tulo atractivo e interesante del post
                 </h1>
                 <p>
                     Y este es el parrafo de inicio donde vamos a explicar las cosas
-                    increíbles que se pueden hacer con las ramas.
+                    incre&iacute;bles que se pueden hacer con las ramas.
                 </p>
                 <p>
-                    Los blogs son la mejor forma de compartir información
+                    Los blogs son la mejor forma de compartir informaci&oacute;n
                     y tus ideas. Mucho mas  que ir a conferencias o salir en
-                    Youtube. Excepto si eres un rockstar. Pero estadísticamente
+                    Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente
                     no lo eres.... por ahora.
                 </p>
                 <p>
