Contribuyendo como un fork

--- a/blogpost.html
+++ b/blogpost.html
@@ -25,7 +25,7 @@
                     no lo eres.... por ahora.
                 </p>
                 <p>
-                    Suscribete y dale like.
+                    Suscribete y dale like, y comenta.
                 </p>
 		<div id="footer">
 			Hecho con amor en Platzi
